<?xml version="1.0"?>
<package format="3">
    <name>funny_lidar_slam</name>
    <version>0.0.0</version>
    <description>This is a funny lidar slam package</description>
    <maintainer email="849742405@qq.com">meng</maintainer>
    <license>TODO</license>
  
    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>pcl_ros</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>livox_ros_driver2</depend>
    <depend>libg2o</depend>

    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
      <build_type>ament_cmake</build_type>
    </export>
</package>
